# grpchook

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  AGENTS.md  __init__.py  pdm_build.py  performance.md  performance_suggestions.md  performance_threading_considerations.md  pyproject.toml  readme.md  readme_final.md  requirements-weekly.txt  requirements.txt  requirements_examples.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pypi_publish.yml  weekly-grpc-compat.yml  weekly-latest-python.yml
docs/: performance.md
examples/: readme.md
examples/interactive_streaming/: GrpcServerExample.py  LMProxyClient.py  TextClient.py  _lm_http.py  readme.md  run_server_proxy.py  run_text_client.py
examples/mcp_server/: FileOperationClient.py  GrpcServer.py  LlmBridgeClient.py  RunnerClient.py  _llm_utils.py  _task.py  readme.md  run_example.py
examples/watchdog/: readme.md  server_watchdog.py  watchdog_ui.py
grpchook/: __init__.py  __main__.py  baseclient.py  baseserver.py  custom_interface.py  data_register.py  exceptions.py  logger.py  message.proto  schema_version.py  timer.py  tools.py
grpchook/assets/: HOW_TO.md
tests/: __init__.py  test_base_client.py  test_base_server.py  test_cli_installed.py  test_data_register.py  test_logger.py  test_tools.py
tests/integration/: _interface.py  _server_base.py  run_integration_tests.py
tests/integration/basic/: clients_basic.py  server_basic.py
tests/integration/broadcast/: clients_broadcast.py  (+1 more)
(+30 files in other folders)
