[build-system]
requires = ["pdm-backend", "grpcio-tools==1.81.0"]
build-backend = "pdm.backend"

[project]
name = "grpchook"
dynamic = ["version"]
description = "grpchook (GRpc + ASynchronuouS + hook) — Python gRPC bidirectional-streaming framework. Subclass BaseServer/BaseClient, override hooks — the base handles all gRPC plumbing."
readme = "readme.md"
requires-python = ">=3.10"
authors = [
    { name = "Fabian Krumm", email = "ghub_fk@gmx.de" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = [
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
    "protobuf==6.33.5",
    "coloredlogs>=15.0",
    "psutil>=5.0.0",
]

[tool.pdm.build]
source-includes = [
    "tests/",
    "requirements.txt",
    "HOW_TO.md",
]
package-data = {"grpchook" = ["HOW_TO.md", "message.proto", "*.pyi"]}

[tool.pdm]
version = { source = "file", path = "__init__.py" }
distribution = true

[project.urls]
homepage = "https://github.com/fwkrumm/grpchook"
